# scoring

./: .pre-commit-config.yaml  api.py  pyproject.toml  readme.md  runserver.py  scoring.py  scoring.pyproj  scoring.sln  store.py  test.py
.github/workflow/: main.yml
.github/workflows/: main.yml
scoring/: api.py  scoring.py
tests/: conftest.py
tests/integration/: test_api.py  test_scoring.py
tests/unit/: test_bad_auth.py  test_store.py
