[tool.poetry]
name = "scoring"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vihrachev@anc.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.4"
redis = "^5.2.1"
requests = "^2.32.3"
structlog = "^25.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
